# macname

./: .dir-locals.el  .gitignore  bruteforce.sh  default.nix  dir-locals.nix  flake.nix  macname.cabal  macname.nix
nix/: buffer.nix  build.nix  dash-haskell.nix  nixpkgs-src.json
nix/id-table/: auenheim.kleen.org.nix  nixos-installers.kleen.org.nix  wolkenheim.kleen.org.nix
nix/pkgs-make/: haskell.nix
src/: Main.hs
src/Radium/: Element.hs
