name:                macname
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/macname#readme
license:             BSD3
license-file:        LICENSE
author:              Viktor Kleen
maintainer:          vkleen+github@17220103.de
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable macname
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , cryptonite
                     , memory
                     , optparse-applicative
                     , text
                     , unix
  other-modules:       Radium.Element
